--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Hello World</title>
+        <img>YaoMingMeme.jpg</img>
     </head>
     <body>
         <h1>Hello World</h1>
