--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Hello World</title>
-        <img>YaoMingMeme.jpg</img>
+        <img src="YaoMingMeme.jpg" width="300" height="400">
     </head>
     <body>
         <h1>Hello World</h1>
