--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Hello World</title>
         <img src="YaoMingMeme.jpg" width="300" height="400">
+        <audio controls> <source src="Pikachu Echo.mp3" type="audio/mpeg">
+    </audio>
     </head>
     <body>
         <h1>Hello World</h1>
