--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
     <head>
-        <span style="color:blue">Welcome to my page!</span>
+        <title>
+            <span style="color:blue">Welcome to my page!</span>
+        </title>
     </head>
     <body>
+        <h1>Video start at 3:00</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/cX-Oqdt7gmc?start=180" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>     
-
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850967.544072283!2d126.01257917393848!3d33.576961295130374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350ce3544cc84045%3A0x66bc36d2981ebf31!2sJeju-do%2C%20South%20Korea!5e0!3m2!1sen!2sus!4v1602394397156!5m2!1sen!2sus" width="560" height="315" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-
+        
+        <h2>Video Sample</h2>
         <video width="320" height="240" controls>
             <source src="husky.mp4" type="video/mp4">
-          Your browser does not support the video tag.
           </video>
+
+          <h3>Google map</h3>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850967.544072283!2d126.01257917393848!3d33.576961295130374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350ce3544cc84045%3A0x66bc36d2981ebf31!2sJeju-do%2C%20South%20Korea!5e0!3m2!1sen!2sus!4v1602394397156!5m2!1sen!2sus" width="560" height="315" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
     </body>
 </html>
