--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -14,6 +14,9 @@
 
           <h3>Google map</h3>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850967.544072283!2d126.01257917393848!3d33.576961295130374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350ce3544cc84045%3A0x66bc36d2981ebf31!2sJeju-do%2C%20South%20Korea!5e0!3m2!1sen!2sus!4v1602394397156!5m2!1sen!2sus" width="560" height="315" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          
+          <h4>Image using object tag</h4>
+          <object data="wolf.jpg" width="300" height="200"></object>
 
     </body>
 </html>
