--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -5,8 +5,12 @@
     </head>
     <body>
         <h1>RSS Feed</h1>
-        <script language='Javascript' src='http://www.rss2java.com/feed.php?number=0&date=1&desc=2&html=2&new=1&url=https%3A%2F%2Fapi.foxsports.com%2Fv1%2Frss%3FpartnerKey%3DzBaFxRyGKCfxBagJG9b8pqLyndmvo7UU%26tag%3Dufc'></script><noscript><a href='http://www.rss2java.com/' target=_blank>RSS2JAVA</a></noscript>
+        <link rel="alternate" type="application/rss+xml" title="Top Web design software Feed" href="https://www.cbssports.com/rss/headlines/boxing/" /> 
 
+        <noscript>
+        <a href="http://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fapi.foxsports.com%2Fv1%2Frss%3FpartnerKey%3DzBaFxRyGKCfxBagJG9b8pqLyndmvo7UU%26tag%3Dufc&chan=y&desc=1&utf=y&html=y">View RSS feed</a>
+        </noscript>
+        
         <h2>Video start at 3:00</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/cX-Oqdt7gmc?start=180" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>     
         
