--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -56,7 +56,7 @@
     <!-- end sw-rss-feed code -->
         
         <h2>Video start at 3:00</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/cX-Oqdt7gmc?start=180" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>     
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cX-Oqdt7gmc?start=180" fs="0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>     
         
         <h2>Video using html5 video tag</h2>
         <video width="320" height="240" controls>
